# ethics-analyzer

./: .gitignore  README.md  api.py  ethics_analyzer.py  git_connector.py  github_connector.py  llm_client.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.json
