[project]
name = "ethics-analyzer"
version = "0.1.0"
description = "AI-powered GitHub code ethics analyzer detecting bias, fairness issues, and responsible AI violations in repositories."
authors = [
    { name = "laavanjan", email = "laavanjanlaa@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "gitpython>=3.1.46",
    "groq>=1.0.0",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.42.0",
    "streamlit-keyup>=0.2.4",
    "uvicorn[standard]>=0.42.0",
]
